--- a/.gitignore
+++ b/.gitignore
@@ -217,5 +217,6 @@ $RECYCLE.BIN/
 
 # Documentation
 /test-output
+screenshots/
 
 # End of https://www.gitignore.io/api/osx,java,maven,eclipse,windows,netbeans,intellij
